updated div & script for all breweries

--- a/pages/georgetown.html
+++ b/pages/georgetown.html
@@ -15,7 +15,7 @@
         <nav id="main_nav">
             <ul>
               <li><a href="home.html">Home</a></li>
-              <li><a href="../index.html">Finder</a></li>
+              <li><a href="index.html">Finder</a></li>
               <li><a>Breweries</a>
               <ul>
                 <li>
@@ -102,6 +102,9 @@
         <h2>Georgetown Brewing Company</h2>
         <p>Georgetown Brewing Company, an independently owned Seattle craft brewery and maker of Manny's Pale Ale. In May of 2017, after 14 years selling beer, we went from a draft-only production facility to canning select full-time beers (hey, we always said “never say never”). Sorry, still no brewpub, but we do have a retail shop where you can pick up kegs to go, growlers, cans and perhaps get a taste of our newest beer.</p>
       </div>
+      <div id='rerun'>
+          <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
+        </div>
       <div id='social'>
           <ul>
               <li><a href="https://georgetownbeer.com/">Georgetown Brewing Website</a></li>
@@ -134,5 +137,6 @@
     </footer>
   </div>
   <script src = "../app.js"></script>
+  <script src = "../brew.js"></script>
 </body>
 </html>
