--- a/pages/hellbent.html
+++ b/pages/hellbent.html
@@ -15,7 +15,7 @@
         <nav id="main_nav">
             <ul>
               <li><a href="home.html">Home</a></li>
-              <li><a href="../index.html">Finder</a></li>
+              <li><a href="index.html">Finder</a></li>
               <li><a>Breweries</a>
               <ul>
                 <li>
@@ -30,6 +30,7 @@
                   <a>Capitol Hill</a>
                   <ul>
                     <li><a href="optimism.html">Optimism Brewing</a></li>
+                    <li><a href="outerplanet.html">Outer Planet Brewing</a></li>
                   </ul>
                 </li>
                 <li>
@@ -43,6 +44,12 @@
                   <ul>
                     <li><a href="fremont.html">Fremont Brewing</a></li>
                     <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Georgetown</a>
+                  <ul>
+                    <li><a href="georgetown.html">Georgetown Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
@@ -67,11 +74,13 @@
                   <a>Pike Place</a>
                   <ul>
                     <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                    <li><a href="pike.html">Pike Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
                   <a>SoDo</a>
                   <ul>
+                    <li><a href="seapine.html">Seapine Brewing Company</a></li>
                     <li><a href="twobeers.html">Two Beers Brewing</a></li>
                   </ul>
                 </li>
@@ -93,6 +102,9 @@
         <h2>Hellbent Brewing Company</h2>
         <p>Hellbent Brewing Company is a place that takes the art of brewery to the next level.  Founded by four friends, Hellbent offers a variety of drinks; from their own explicit blends, to over a dozen of local beers on tap.  Whether it's wine, cider, beer or an original brew, Hellbent is the place to sit and drink with friends, or make new ones.</p>
       </div>
+      <div id='rerun'>
+          <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
+        </div>
       <div id='social'>
         <ul>
           <li><a href='http://www.hellbentbrewingcompany.com/'>Hellbent Brewing Website</a></li>
@@ -125,5 +137,6 @@
     </footer>
   </div>
   <script src = "../app.js"></script>
+  <script src = "../brew.js"></script>
 </body>
 </html>
