--- a/pages/holymt.html
+++ b/pages/holymt.html
@@ -15,7 +15,7 @@
         <nav id="main_nav">
             <ul>
               <li><a href="home.html">Home</a></li>
-              <li><a href="../index.html">Finder</a></li>
+              <li><a href="index.html">Finder</a></li>
               <li><a>Breweries</a>
               <ul>
                 <li>
@@ -30,6 +30,7 @@
                   <a>Capitol Hill</a>
                   <ul>
                     <li><a href="optimism.html">Optimism Brewing</a></li>
+                    <li><a href="outerplanet.html">Outer Planet Brewing</a></li>
                   </ul>
                 </li>
                 <li>
@@ -43,6 +44,12 @@
                   <ul>
                     <li><a href="fremont.html">Fremont Brewing</a></li>
                     <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Georgetown</a>
+                  <ul>
+                    <li><a href="georgetown.html">Georgetown Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
@@ -67,11 +74,13 @@
                   <a>Pike Place</a>
                   <ul>
                     <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                    <li><a href="pike.html">Pike Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
                   <a>SoDo</a>
                   <ul>
+                    <li><a href="seapine.html">Seapine Brewing Company</a></li>
                     <li><a href="twobeers.html">Two Beers Brewing</a></li>
                   </ul>
                 </li>
@@ -95,6 +104,9 @@
             After some planning and development, they began their operation in 2014 and continue to this day.
             While oak-inspired beers may be their specialty, they do provide a wide range of ales and lagers for all beer fanatics.</p>
       </div>
+      <div id='rerun'>
+          <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
+        </div>
       <div id='social'>
         <ul>
           <li><a href="https://holymountainbrewing.com/#">Holy Mountain Website</a></li>
@@ -126,5 +138,6 @@
     </footer>
   </div>
   <script src = "../app.js"></script>
+  <script src = "../brew.js"></script>
 </body>
 </html>
