--- a/pages/pike.html
+++ b/pages/pike.html
@@ -15,7 +15,7 @@
         <nav id="main_nav">
             <ul>
               <li><a href="home.html">Home</a></li>
-              <li><a href="../index.html">Finder</a></li>
+              <li><a href="index.html">Finder</a></li>
               <li><a>Breweries</a>
               <ul>
                 <li>
@@ -30,6 +30,7 @@
                   <a>Capitol Hill</a>
                   <ul>
                     <li><a href="optimism.html">Optimism Brewing</a></li>
+                    <li><a href="outerplanet.html">Outer Planet Brewing</a></li>
                   </ul>
                 </li>
                 <li>
@@ -43,6 +44,12 @@
                   <ul>
                     <li><a href="fremont.html">Fremont Brewing</a></li>
                     <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Georgetown</a>
+                  <ul>
+                    <li><a href="georgetown.html">Georgetown Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
@@ -73,6 +80,7 @@
                 <li>
                   <a>SoDo</a>
                   <ul>
+                    <li><a href="seapine.html">Seapine Brewing Company</a></li>
                     <li><a href="twobeers.html">Two Beers Brewing</a></li>
                   </ul>
                 </li>
@@ -94,6 +102,9 @@
         <h2>Pike Brewing Company</h2>
         <p>Founded in 1989 by Charles and Rose Ann Finkel, Pike Brewing Company has become a staple of many locals and tourists that visit the Pike Place Market. Offering a family friendly spot to grab some food and a few good drinks, Pike offers an extremely welcoming pub as well as a more upscale eating experience in the upstairs shootoff, Tankard & Tun.  </p>
       </div>
+      <div id='rerun'>
+          <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
+        </div>
       <div id='social'>
           <ul>
               <li><a href="https://www.pikebrewing.com/">Pike Brewing Website</a></li>
@@ -125,5 +136,6 @@
     </footer>
   </div>
   <script src = "../app.js"></script>
+  <script src = "../brew.js"></script>
 </body>
 </html>
