--- a/pages/seapine.html
+++ b/pages/seapine.html
@@ -15,7 +15,7 @@
         <nav id="main_nav">
             <ul>
               <li><a href="home.html">Home</a></li>
-              <li><a href="../index.html">Finder</a></li>
+              <li><a href="index.html">Finder</a></li>
               <li><a>Breweries</a>
               <ul>
                 <li>
@@ -30,6 +30,7 @@
                   <a>Capitol Hill</a>
                   <ul>
                     <li><a href="optimism.html">Optimism Brewing</a></li>
+                    <li><a href="outerplanet.html">Outer Planet Brewing</a></li>
                   </ul>
                 </li>
                 <li>
@@ -43,6 +44,12 @@
                   <ul>
                     <li><a href="fremont.html">Fremont Brewing</a></li>
                     <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Georgetown</a>
+                  <ul>
+                    <li><a href="georgetown.html">Georgetown Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
@@ -95,6 +102,9 @@
         <h2>Seapine Brewing Company</h2>
         <p>Founded in 2011 in a small 750 square foot space on 4th ave, Seapine has grown to produce some of the most consistent beers in the Pacific Northwest. In 2015, with production needs ramping up, Seapine relocated about a mile away from its first home to a new 6,000 square foot operation on Utah Ave, continuing to churn out some amazing brews. With a great space and friendly staff, this is definitely a spot to check out in Seattle.</p>
       </div>
+      <div id='rerun'>
+          <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
+        </div>
       <div id='social'>
           <ul>
               <li><a href="http://www.seapinebrewing.com/">Seapine Brewing Website</a></li>
@@ -127,5 +137,6 @@
     </footer>
   </div>
   <script src = "../app.js"></script>
+  <script src = "../brew.js"></script>
 </body>
 </html>
