--- a/pages/urbanfam.html
+++ b/pages/urbanfam.html
@@ -13,79 +13,88 @@
             <h1>Seattle Brewery Finder</h1>
         </div>
         <nav id="main_nav">
-                <ul>
-                  <li><a href="home.html">Home</a></li>
-                  <li><a href="../index.html">Finder</a></li>
-                  <li><a>Breweries</a>
+            <ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="index.html">Finder</a></li>
+              <li><a>Breweries</a>
+              <ul>
+                <li>
+                  <a>Ballard</a>
                   <ul>
-                    <li>
-                      <a>Ballard</a>
-                      <ul>
-                        <li><a href="peddler.html">Peddler Brewing</a></li>
-                        <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                        <li><a href="reubens.html">Reuben's Brews</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a>Capitol Hill</a>
-                      <ul>
-                        <li><a href="optimism.html">Optimism Brewing</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a>Central District</a>
-                      <ul>
-                        <li><a href="standard.html">Standard Brewing</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a>Fremont</a>
-                      <ul>
-                        <li><a href="fremont.html">Fremont Brewing</a></li>
-                        <li><a href="outlander.html">Outlander Brewing</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a>Interbay</a>
-                      <ul>
-                        <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a>Lake City</a>
-                      <ul>
-                        <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a>Magnolia</a>
-                      <ul>
-                        <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a>Pike Place</a>
-                      <ul>
-                        <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a>SoDo</a>
-                      <ul>
-                        <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a>Ravenna</a>
-                      <ul>
-                        <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                      </ul>
-                    </li>
+                    <li><a href="peddler.html">Peddler Brewing</a></li>
+                    <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                    <li><a href="reubens.html">Reuben's Brews</a></li>
                   </ul>
-                  </li>
-                  <li><a href="aboutus.html">About Us</a></li>
-                </ul>
-              </nav>
+                </li>
+                <li>
+                  <a>Capitol Hill</a>
+                  <ul>
+                    <li><a href="optimism.html">Optimism Brewing</a></li>
+                    <li><a href="outerplanet.html">Outer Planet Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Central District</a>
+                  <ul>
+                    <li><a href="standard.html">Standard Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Fremont</a>
+                  <ul>
+                    <li><a href="fremont.html">Fremont Brewing</a></li>
+                    <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Georgetown</a>
+                  <ul>
+                    <li><a href="georgetown.html">Georgetown Brewing Company</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Interbay</a>
+                  <ul>
+                    <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Lake City</a>
+                  <ul>
+                    <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Magnolia</a>
+                  <ul>
+                    <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Pike Place</a>
+                  <ul>
+                    <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                    <li><a href="pike.html">Pike Brewing Company</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>SoDo</a>
+                  <ul>
+                    <li><a href="seapine.html">Seapine Brewing Company</a></li>
+                    <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Ravenna</a>
+                  <ul>
+                    <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                  </ul>
+                </li>
+              </ul>
+              </li>
+              <li><a href="aboutus.html">About Us</a></li>
+            </ul>
+          </nav>
     </header>
     <section>
       <div id='breweryInfo'>
@@ -93,6 +102,9 @@
         <h2>Urban Family Brewing</h2>
         <p>Serving mainly French and Belgian farmhouse styles with Pacific Northwest ingredients.  This industrial style brewery located in the Magnolia neighborhood also rotates its beers regularly which guarantees they are utilizing fresh ingredients as well as complex yeast strains.  Urban Family is a small craft brewery that also serves East Coast style IPA’s.</p>
       </div>
+      <div id='rerun'>
+          <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
+        </div>
       <div id='social'>
           <ul>
               <li><a href="http://www.urbanfamilybrewing.com/">Urban Family Website</a></li>
@@ -124,5 +136,6 @@
     </footer>
   </div>
   <script src = "../app.js"></script>
+  <script src = "../brew.js"></script>
 </body>
 </html>
