--- a/pages/optimism.html
+++ b/pages/optimism.html
@@ -15,7 +15,7 @@
         <nav id="main_nav">
             <ul>
               <li><a href="home.html">Home</a></li>
-              <li><a href="../index.html">Finder</a></li>
+              <li><a href="index.html">Finder</a></li>
               <li><a>Breweries</a>
               <ul>
                 <li>
@@ -30,6 +30,7 @@
                   <a>Capitol Hill</a>
                   <ul>
                     <li><a href="optimism.html">Optimism Brewing</a></li>
+                    <li><a href="outerplanet.html">Outer Planet Brewing</a></li>
                   </ul>
                 </li>
                 <li>
@@ -43,6 +44,12 @@
                   <ul>
                     <li><a href="fremont.html">Fremont Brewing</a></li>
                     <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Georgetown</a>
+                  <ul>
+                    <li><a href="georgetown.html">Georgetown Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
@@ -67,11 +74,13 @@
                   <a>Pike Place</a>
                   <ul>
                     <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                    <li><a href="pike.html">Pike Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
                   <a>SoDo</a>
                   <ul>
+                    <li><a href="seapine.html">Seapine Brewing Company</a></li>
                     <li><a href="twobeers.html">Two Beers Brewing</a></li>
                   </ul>
                 </li>
@@ -93,6 +102,9 @@
         <h2>Optimism Brewing</h2>
         <p>Located in the Capital Hill area of Seattle Optimism brewing boasts 16,000 square feet just for beer.  Opened by husband and wife team Troy Hakala and Gay Gilmore in 2015 it has proven to have staying power.  They do not have food, but sometimes there are food trucks in the courtyard and they let you get food delivered.  Bring your credit cards because Optimism has a “no cash, no tip” policy and all of there workers get paid a living wage.  Optimism hosts an array of meet ups and other events.</p>
       </div>
+      <div id='rerun'>
+          <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
+        </div>
       <div id='social'>
           <ul>
               <li><a href="http://optimismbrewing.com/">Optimism Brewing Website</a></li>
@@ -129,5 +141,6 @@
     </footer>
   </div>
   <script src = "app.js"></script>
+  <script src = "../brew.js"></script>
 </body>
 </html>
