--- a/pages/populuxe.html
+++ b/pages/populuxe.html
@@ -15,7 +15,7 @@
       <nav id="main_nav">
           <ul>
             <li><a href="home.html">Home</a></li>
-            <li><a href="../index.html">Finder</a></li>
+            <li><a href="index.html">Finder</a></li>
             <li><a>Breweries</a>
             <ul>
               <li>
@@ -30,6 +30,7 @@
                 <a>Capitol Hill</a>
                 <ul>
                   <li><a href="optimism.html">Optimism Brewing</a></li>
+                  <li><a href="outerplanet.html">Outer Planet Brewing</a></li>
                 </ul>
               </li>
               <li>
@@ -43,6 +44,12 @@
                 <ul>
                   <li><a href="fremont.html">Fremont Brewing</a></li>
                   <li><a href="outlander.html">Outlander Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a>Georgetown</a>
+                <ul>
+                  <li><a href="georgetown.html">Georgetown Brewing Company</a></li>
                 </ul>
               </li>
               <li>
@@ -67,11 +74,13 @@
                 <a>Pike Place</a>
                 <ul>
                   <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                  <li><a href="pike.html">Pike Brewing Company</a></li>
                 </ul>
               </li>
               <li>
                 <a>SoDo</a>
                 <ul>
+                  <li><a href="seapine.html">Seapine Brewing Company</a></li>
                   <li><a href="twobeers.html">Two Beers Brewing</a></li>
                 </ul>
               </li>
@@ -88,13 +97,13 @@
         </nav>
   </header>
   <section>
-    <div id='rerun'>
-      <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
-    </div>
     <div id='breweryInfo'>
         <img src="../images/brewImages/populuxelogo.jpg" alt="Populuxe Brewing" width="300">
       <h2>Populuxe Brewing</h2>
       <p>Founded by co-ownwers Peter and Amy. Populuxe Brewing is the culmination of the dedication of home brewed beer that outgrew its space.  Within months of success, Populuxe Brewing is a nice small place with limited home-brewed beers.</p>
+    </div>
+    <div id='rerun'>
+      <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
     </div>
     <div id='social'>
       <ul>
