--- a/pages/standard.html
+++ b/pages/standard.html
@@ -15,7 +15,7 @@
         <nav id="main_nav">
             <ul>
               <li><a href="home.html">Home</a></li>
-              <li><a href="../index.html">Finder</a></li>
+              <li><a href="index.html">Finder</a></li>
               <li><a>Breweries</a>
               <ul>
                 <li>
@@ -30,6 +30,7 @@
                   <a>Capitol Hill</a>
                   <ul>
                     <li><a href="optimism.html">Optimism Brewing</a></li>
+                    <li><a href="outerplanet.html">Outer Planet Brewing</a></li>
                   </ul>
                 </li>
                 <li>
@@ -43,6 +44,12 @@
                   <ul>
                     <li><a href="fremont.html">Fremont Brewing</a></li>
                     <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Georgetown</a>
+                  <ul>
+                    <li><a href="georgetown.html">Georgetown Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
@@ -67,11 +74,13 @@
                   <a>Pike Place</a>
                   <ul>
                     <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                    <li><a href="pike.html">Pike Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
                   <a>SoDo</a>
                   <ul>
+                    <li><a href="seapine.html">Seapine Brewing Company</a></li>
                     <li><a href="twobeers.html">Two Beers Brewing</a></li>
                   </ul>
                 </li>
@@ -93,6 +102,9 @@
         <h2>Standard Brewing</h2>
         <p>Owner and head brewer Justin Gerardy opened up Standard Brewing in 2013 and has been making large leaps ever since. Starting out as a nano-brewery, Standard has gone through major changes by adding more capacity plus a full menu and liquor options at their Jackson Street location. This gives patrons many different options, even if one of their dozen or so beer offerings don't quite hit the spot.</p>
       </div>
+      <div id='rerun'>
+          <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
+        </div>
       <div id='social'>
           <ul>
             <li><a href='http://standardbrew.com/'> Standard Brewing Website</a></li>
@@ -123,5 +135,6 @@
     </footer>
   </div>
   <script src = "../app.js"></script>
+  <script src = "../brew.js"></script>
 </body>
 </html>
