--- a/pages/twobeers.html
+++ b/pages/twobeers.html
@@ -15,7 +15,7 @@
         <nav id="main_nav">
             <ul>
               <li><a href="home.html">Home</a></li>
-              <li><a href="../index.html">Finder</a></li>
+              <li><a href="index.html">Finder</a></li>
               <li><a>Breweries</a>
               <ul>
                 <li>
@@ -30,6 +30,7 @@
                   <a>Capitol Hill</a>
                   <ul>
                     <li><a href="optimism.html">Optimism Brewing</a></li>
+                    <li><a href="outerplanet.html">Outer Planet Brewing</a></li>
                   </ul>
                 </li>
                 <li>
@@ -43,6 +44,12 @@
                   <ul>
                     <li><a href="fremont.html">Fremont Brewing</a></li>
                     <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Georgetown</a>
+                  <ul>
+                    <li><a href="georgetown.html">Georgetown Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
@@ -67,11 +74,13 @@
                   <a>Pike Place</a>
                   <ul>
                     <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                    <li><a href="pike.html">Pike Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
                   <a>SoDo</a>
                   <ul>
+                    <li><a href="seapine.html">Seapine Brewing Company</a></li>
                     <li><a href="twobeers.html">Two Beers Brewing</a></li>
                   </ul>
                 </li>
@@ -93,6 +102,9 @@
         <h2>Two Beers Brewing Company</h2>
         <p>10 years into their existance, Two Beers Brewing is still one of the most consitent breweries that you can find in Seattle. Working out of an office park in the Sodo/Georgetown neighborhood, you will find a great spot for groups of all sizes with 24+ taps of Two Beers, plus sister Seattle Cider Company, as well as food prepared on site by Bread & Circus's. Defintiely one of the better options from one of the longer tenured Seattle brewing venture.</p>
       </div>
+      <div id='rerun'>
+          <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
+        </div>
       <div id='social'>
         <ul>
           <li><a href='https://www.twobeersbrewery.com/'>Two Beers Website</a></li>
@@ -124,5 +136,6 @@
     </footer>
   </div>
   <script src = "../app.js"></script>
+  <script src = "../brew.js"></script>
 </body>
 </html>
