--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
   <title>Seattle Brewery Finder</title>
   <link rel="stylesheet" type="text/css" href="../css/styleHome.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
-  <link rel="shortcut icon" href="../images/icons/beericon.jpg" type="image/x-icon" />
+  <link rel="shortcut icon" href="../images/icons/beericon.png" type="image/x-icon" />
 </head>
 <body>
   <div id ="wrapper">
