--- a/pages/cloudburst.html
+++ b/pages/cloudburst.html
@@ -5,6 +5,7 @@
   <title>Cloudburst Brewing</title>
   <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+  <link rel="shortcut icon" href="images/icons/beericon.png" type="image/x-icon" />
 </head>
 <body>
   <div id="wrapper">
