--- a/pages/twobeers.html
+++ b/pages/twobeers.html
@@ -5,7 +5,7 @@
   <title>Two Beers Brewing Company</title>
   <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
-  <link rel="shortcut icon" href="../images/icons/beericon.jpg" type="image/x-icon" />
+  <link rel="shortcut icon" href="../images/icons/beericon.png" type="image/x-icon" />
 </head>
 <body>
   <div id="wrapper">
