--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -102,12 +102,12 @@
     <div id="group">
       <h2>The Team behind Seattle Brewery Finder!</h2>
       <!-- group photo -->
-      <img src= "http://via.placeholder.com/720x360">
+      <img src= "../images/brewImages//BrewGroup.jpg"width ="720" hieght ="360">
       <p>Meet the masterminds responsible for Seattle Brewery Finder!</p>
     </div>
     <!-- first -->
     <div class="masterminds">
-      <img class="name" src= "http://via.placeholder.com/200x300">
+      <img class="name" src= "../images/brewImages//DaveS.jpg" width="200" height="300">
       <div class="bio">
         <div class="contact2">
           <div class="person">
@@ -125,7 +125,7 @@
     </div>
     <!-- second -->
     <div class="masterminds">
-      <img class="name2" src= "http://via.placeholder.com/200x300">
+      <img class="name2" src= "../images/brewImages/Tyler.jpg" width="200" height="300">
       <div class="bio">
         <div class="contact">
           <div class="person">
@@ -158,7 +158,7 @@
     </div>
     <!-- fourth -->
     <div class="masterminds">
-      <img class="name2" src= "http://via.placeholder.com/200x300">
+      <img class="name2" src= "../images/brewImages/Phill.jpg" width="200" height="300">
       <div class="bio">
         <div class="contact">
           <div class="person">
