dave's image not showing up on deployment.  checking to see if case sensitive

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -143,7 +143,7 @@
     </div>
     <!-- third -->
     <div class="masterminds">
-      <img class="name" src= "../images/brewImages/daveMe.jpg" width="200" height="300">
+      <img class="name" src= "../images/brewImages/daveMe.JPG" width="200" height="300">
       <div class="bio">
         <div class="contact2">
           <div class="person">
