updated pages for issues we found on projector

--- a/pages/holymt.html
+++ b/pages/holymt.html
@@ -114,7 +114,7 @@
           <li><a href="https://www.facebook.com/HolyMountainBrewing/"><img src="../images/icons/facebook.png" alt="facebook logo"> Facebook</a></li>
           <li><a href="https://twitter.com/holymtnbrewing"><img src="../images/icons/twitter.png" alt="twitter logo"> Twitter</a></li>
           <li><a href="https://www.instagram.com/holymtnbrewing/"><img src="../images/icons/instagram.png" alt="instagram logo"> Instagram</a></li>
-          <li><a href="https://untappd.com/HolyMountainBrewing"><img src="../images/icons/facebook.png" alt="utappd logo"> Untappd</a></li>
+          <li><a href="https://untappd.com/HolyMountainBrewing"><img src="../images/icons/untappd.png" alt="untappd logo"> Untappd</a></li>
         </ul>
       </div>
       <div id='map'>
