--- a/pages/populuxe.html
+++ b/pages/populuxe.html
@@ -101,7 +101,7 @@
     <div id='breweryInfo'>
         <img src="../images/brewImages/populuxelogo.jpg" alt="Populuxe Brewing" width="300">
       <h2>Populuxe Brewing</h2>
-      <p>Founded by co-ownwers Peter and Amy. Populuxe Brewing is the culmination of the dedication of home brewed beer that outgrew its space.  Within months of success, Populuxe Brewing is a nice small place with limited home-brewed beers.</p>
+      <p>Founded by co-owners Peter and Amy. Populuxe Brewing is the culmination of the dedication of home brewed beer that outgrew its space.  Within months of success, Populuxe Brewing is a nice small place with limited home-brewed beers.</p>
     </div>
     <div id='rerun'>
       <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
