--- a/pages/index.html
+++ b/pages/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="description" content="Find local breweries based on specific criteria"/>
+  <meta name="keywords" content="beer, brews, breweries, local breweries, local pubs, food and beer, breweries and dogs, breweries and kids, Seattle breweries"/>
   <title>Seattle Brewery Finder</title>
   <link rel="stylesheet" type="text/css" href="../css/index.css" />
   <!-- <link rel="stylesheet" type="text/css" href="css/reset.css" /> -->
-  <link rel="shortcut icon" href="images/icons/beericon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="../images/icons/beericon.png" type="image/x-icon" />
 </head>
 <body>
   <div class="wrapper">
